.provarCaches/00D5f000005vwGkEAI/objects/rstkf__apagingd__c.object
<CustomObject>
    <description>apagingd__c : Detail table for AP Aging data for drill down enabled</description>
    <fields>
        <fullName>rstkf__Age_Due__c</fullName>
        <description>Age of the invoice based on the invoice due date. Formula is Invoice Due Date - As of Date</description>
        <formula>rstkf__apagingd_duedate__c - rstkf__apagingd_xagingdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the invoice based on the invoice due date. Formula is Invoice Due Date - As of Date</inlineHelpText>
        <label>Age - Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__Age_Transaction__c</fullName>
        <description>Age of the invoice based on the transaction date. Formula is Invoice Transaction Date - As of Date</description>
        <formula>rstkf__apagingd_trandate__c - rstkf__apagingd_xagingdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the invoice based on the transaction date. Formula is Invoice Transaction Date - As of Date</inlineHelpText>
        <label>Age - Transaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__Currency_Home__c</fullName>
        <formula>TEXT( rstkf__apagingd_apinvtxn__r.rstkf__apinvtxn_homecurr__r.rstk__sycurr_currency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Home</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Currency_Transaction__c</fullName>
        <formula>TEXT(rstkf__apagingd_apinvtxn__r.rstkf__apinvtxn_maintcurr__r.rstk__sycurr_currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Transaction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Rate_of_Exchange__c</fullName>
        <formula>rstkf__apagingd_apinvtxn__r.rstkf__apinvtxn_exchangerate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate of Exchange</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_apagingh__c</fullName>
        <label>Report Header</label>
        <referenceTo>rstkf__apagingh__c</referenceTo>
        <relationshipLabel>AP Aging Drill Down Details</relationshipLabel>
        <relationshipName>apagingds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Item</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>AP Aging Drill Down Details</relationshipLabel>
        <relationshipName>apagingds01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_currencytext__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_discntduedate__c</fullName>
        <label>Discount Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_docno__c</fullName>
        <label>Document #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_duedate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_lineno__c</fullName>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_linetext__c</fullName>
        <label>Z_OBSOLETE_linetext</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_linetype__c</fullName>
        <label>Z_OBSOLETE_linetyp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Drill Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_numcol1__c</fullName>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_numcol2__c</fullName>
        <label>Z_OBSOLETE2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_numcol3__c</fullName>
        <label>Z_OBSOLETE_numcol3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_totaltext__c</fullName>
        <label>Z_OBSOLETE_Total_Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_trandate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_tranid__c</fullName>
        <label>Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_trantype__c</fullName>
        <label>Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_xagingdate__c</fullName>
        <formula>rstkf__apagingd_apagingh__r.rstkf__apagingh_agingdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_xopenamthome__c</fullName>
        <description>apagingd_xopenamthome__c</description>
        <label>Open Amount - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_xopenamtmaint__c</fullName>
        <description>apagingd_xopenamtmaint__c</description>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_xpohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>apagingd_xpohdr__c</description>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>AP Aging Drill Down Details (Purchase Order)</relationshipLabel>
        <relationshipName>apagingds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_xporcptap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>apagingd_xporcptap__c</description>
        <label>PO Receipt</label>
        <referenceTo>rstk__porcptap__c</referenceTo>
        <relationshipLabel>AP Aging Drill Down Details (PO Receipt)</relationshipLabel>
        <relationshipName>apagingds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_xpovend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>apagingd_xpovend__c</description>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>AP Aging Drill Down Details (Vendor)</relationshipLabel>
        <relationshipName>apagingds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingd_xpovendcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>apagingd_xpovendcmpno__c</description>
        <label>Vendor Company</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>AP Aging Drill Down Details (Vendor Company)</relationshipLabel>
        <relationshipName>apagingds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apagingd_apagingh__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; rstkf__apagingd_lineno__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apagingd_apagingh__r.Name &amp; &apos;-&apos; &amp; rstkf__apagingd_lineno__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AP Aging Drill Down Detail</label>
    <listViews>
        <fullName>rstkf__AP_Aging_Drill_Down_Details</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__all</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apagingd_apinvtxn__c</columns>
        <columns>rstkf__apagingd_currencytext__c</columns>
        <columns>rstkf__apagingd_docno__c</columns>
        <columns>rstkf__apagingd_duedate__c</columns>
        <columns>rstkf__apagingd_lineno__c</columns>
        <columns>rstkf__apagingd_apagingh__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__apagingd_linetype__c</columns>
        <columns>rstkf__apagingd_numcol2__c</columns>
        <columns>rstkf__apagingd_numcol3__c</columns>
        <columns>rstkf__apagingd_numcol4__c</columns>
        <columns>rstkf__apagingd_numcol5__c</columns>
        <columns>rstkf__apagingd_numcol6__c</columns>
        <columns>rstkf__apagingd_totaltext__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP Aging Drill Down Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>